Add Serde support (#24)
- Add Serde support for enums.
- Add missing variable layout image format method.

---------

Co-authored-by: Lauro Oyen <laurooyen@gmail.com>

--- a/slang-sys/Cargo.toml
+++ b/slang-sys/Cargo.toml
@@ -7,5 +7,11 @@ repository = "https://github.com/FloatyMonkey/slang-rs"
 license = "MIT OR Apache-2.0"
 categories = ["compilers", "external-ffi-bindings"]
 
+[dependencies]
+serde = { version = "1", features = ["derive"], optional = true }
+
 [build-dependencies]
 bindgen = "0.72.0"
+
+[features]
+serde = ["dep:serde"]
